--- a/package.json
+++ b/package.json
@@ -27,30 +27,31 @@
     ]
   },
   "dependencies": {
-    "@iconify/react": "^3.1.0",
-    "@mui/lab": "^5.0.0-alpha.60",
-    "@mui/material": "^5.2.4",
-    "@mui/x-data-grid": "^5.2.1",
-    "@reduxjs/toolkit": "^1.7.1",
-    "axios": "^0.24.0",
-    "date-fns": "^2.24.0",
-    "framer-motion": "^4.1.17",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@iconify/react": "^3.2.2",
+    "@mui/lab": "^5.0.0-alpha.90",
+    "@mui/material": "^5.9.0",
+    "@mui/x-date-pickers": "^5.0.0-beta.1",
+    "@reduxjs/toolkit": "^1.8.3",
+    "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
+    "framer-motion": "^6.5.1",
     "nprogress": "^0.2.0",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "^17.0.2",
-    "react-dropzone": "^11.4.2",
+    "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
-    "react-redux": "^7.2.6",
-    "react-router": "^6.2.1",
-    "react-scripts": "^4.0.3",
-    "redux": "^4.1.2",
+    "react-redux": "^8.0.2",
+    "react-router": "^6.3.0",
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "simplebar-react": "^2.4.1",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0"
+    "@babel/core": "^7.18.6"
   }
 }
